# tempo

./: .gitignore  Cargo.toml  Dockerfile.reproducible  Dockerfile.reproducible.dockerignore  README.md  bench-e2e.nu  tempo.nu
.changelog/: config.toml  verify-admin.md
.github/scripts/: bench-e2e-classify.js  bench-replay-scheduled-refs.sh  bench-slack-notify.js  bench-tempo-replay.sh
.github/workflows/: bench-e2e-scheduled.yml  bench-e2e.yml  bench-replay-scheduled.yml  bench-replay.yml  bench.yml  codspeed-microbench.yml  release-pr.yml  release.yml  reproducible-build.yml  specs.yml
contrib/bench/: bench-txgen.nu
contrib/bench/txgen/: helpers.nu
contrib/bench/txgen/presets/: tip20.yml
crates/alloy/: CHANGELOG.md  Cargo.toml
crates/alloy/tests/: relay_transport.rs
crates/chainspec/src/: constants.rs  hardfork.rs  spec.rs
crates/commonware-node/src/: args.rs  lib.rs
crates/commonware-node/src/consensus/: block.rs  engine.rs
crates/commonware-node/src/consensus/application/: actor.rs  ingress.rs  mod.rs
crates/commonware-node/src/executor/: actor.rs
crates/commonware-node/src/follow/: driver.rs
crates/contracts/: CHANGELOG.md  Cargo.toml
crates/contracts/src/precompiles/: signature_verifier.rs
crates/e2e/src/: execution_runtime.rs  lib.rs  testing_node.rs
crates/e2e/src/tests/: mod.rs  payload_builder.rs  subblocks.rs
crates/evm/src/: assemble.rs  block.rs  lib.rs
crates/evm/src/consensus/: mod.rs
crates/node/src/: lib.rs  node.rs
crates/node/src/rpc/: error.rs
crates/node/src/rpc/consensus/: types.rs
crates/node/tests/it/: base_fee.rs  eth_call.rs  payment_lane.rs  tip20_gas_fees.rs  tip_fee_amm.rs
crates/node/tests/it/gas/: tip20_transfers.rs
crates/payload/builder/src/: budget.rs  lib.rs  metrics.rs  prewarming.rs
crates/payload/types/: Cargo.toml
crates/payload/types/src/: attrs.rs  budget.rs  lib.rs
crates/precompiles-macros/src/: storable_primitives.rs
crates/precompiles/benches/: tempo_precompiles.rs
crates/precompiles/src/: lib.rs
crates/precompiles/src/account_keychain/: mod.rs
crates/precompiles/src/signature_verifier/: dispatch.rs  mod.rs
crates/precompiles/src/storage/: evm.rs  mod.rs  thread_local.rs
crates/precompiles/src/storage_credits/: accounting.rs
crates/precompiles/src/tip403_registry/: mod.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/transaction/: envelope.rs
crates/revm/src/: common.rs  error.rs  handler.rs
crates/transaction-pool/src/: best.rs  maintain.rs  tempo_pool.rs  transaction.rs  tt_2d_pool.rs  validator.rs
examples/programmatic-node/: Cargo.toml
examples/programmatic-node/src/: main.rs
scripts/: foundry-patch.sh  reproducible-build.sh
tempoup/: install  tempoup
tips/: tip-0000.md  tip-1028.md  tip-1049.md  tip-1059.md  tip-1065.md  tip-1075.md  tip_template.md
tips/verify/test/invariants/: AccountKeychain.t.sol  BlockGasLimits.t.sol  FeeAMM.t.sol  GasPricing.t.sol  Nonce.t.sol  StablecoinDEX.t.sol  TIP1015.t.sol  TIP1026.t.sol  TIP20.t.sol  TIP20Factory.t.sol  TIP403Registry.t.sol  ValidatorConfig.t.sol  ValidatorConfigV2.t.sol  VirtualAddresses.t.sol
xtask/src/: genesis_args.rs
