[package]
name = "tempo-programmatic-node"
description = "Template for embedding the Tempo node launcher with programmatic overrides"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo = { path = "../../bin/tempo" }
# tempo = { git = "https://github.com/tempoxyz/tempo" }
